RESOLVED FIXED223556
AX: textRectsFromMarkers always fails
https://bugs.webkit.org/show_bug.cgi?id=223556
Summary AX: textRectsFromMarkers always fails
chris fleizach
Reported 2021-03-20 10:41:34 PDT
The textRectsFromMarkers:text: method is always failing to return a valid answer because these methods to extend the search range auto startPosition = visiblePositionForPositionWithOffset(makeContainerOffsetPosition(originalRange.start), -textLength); auto endPosition = visiblePositionForPositionWithOffset(makeContainerOffsetPosition(originalRange.start), 2 * textLength); create a range that can't be iterated
Attachments
patch (5.16 KB, patch)
2021-03-20 10:47 PDT, chris fleizach
no flags
patch (5.50 KB, patch)
2021-03-22 09:17 PDT, chris fleizach
no flags
patch (13.11 KB, patch)
2021-03-25 09:16 PDT, chris fleizach
no flags
patch (13.34 KB, patch)
2021-03-31 00:07 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2021-03-20 10:41:49 PDT
chris fleizach
Comment 2 2021-03-20 10:47:19 PDT
chris fleizach
Comment 3 2021-03-22 09:17:20 PDT
EWS
Comment 4 2021-03-22 17:22:06 PDT
Committed r274826: <https://commits.webkit.org/r274826> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423895 [details].
WebKit Commit Bot
Comment 5 2021-03-25 06:40:31 PDT
Re-opened since this is blocked by bug 223746
chris fleizach
Comment 6 2021-03-25 09:16:09 PDT
chris fleizach
Comment 7 2021-03-31 00:07:10 PDT
EWS
Comment 8 2021-04-02 10:41:54 PDT
Committed r275425: <https://commits.webkit.org/r275425> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424737 [details].
Note You need to log in before you can comment on or make changes to this bug.