AX: textRectsFromMarkers always fails https://bugs.webkit.org/show_bug.cgi?id=223556 <rdar://74256003>

Reviewed by Zalan Bujtas.

Source/WebCore:

The textRectsFromMarkers:text: method is always failing to return a valid answer because when we try to extend
the search range of text to search, we're creating a range that can't be iterated with a CharacterIterator.

Test: accessibility/ios-simulator/text-rects-for-range-matches.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::rangeMatchesTextNearRange):

Tools:

* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::rectsForTextMarkerRange):
* WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::rectsForTextMarkerRange):
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::rectsForTextMarkerRange):
* WebKitTestRunner/InjectedBundle/win/AccessibilityUIElementWin.cpp:
(WTR::AccessibilityUIElement::rectsForTextMarkerRange):

LayoutTests:

* accessibility/ios-simulator/text-rects-for-range-matches-expected.txt: Added.
* accessibility/ios-simulator/text-rects-for-range-matches.html: Added.


Canonical link: https://commits.webkit.org/236088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275425 268f45cc-cd09-0410-ab3c-d52691b4dbfc